no guardar cambios

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 
   <!-- Portfolio Modals -->
 
-  <!-- Portfolio Modal 1 -->
+  <!-- Portfolio Modal 1 
   <div class="portfolio-modal mfp-hide" id="portfolio-modal-1">
     <div class="portfolio-modal-dialog bg-white">
       <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
@@ -343,9 +343,9 @@
         </div>
       </div>
     </div>
-  </div>
+  </div>-->
 
-  <!-- Portfolio Modal 2 -->
+  <!-- Portfolio Modal 2 
   <div class="portfolio-modal mfp-hide" id="portfolio-modal-2">
     <div class="portfolio-modal-dialog bg-white">
       <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
@@ -367,9 +367,9 @@
         </div>
       </div>
     </div>
-  </div>
+  </div>-->
 
-  <!-- Portfolio Modal 3 -->
+  <!-- Portfolio Modal 3 
   <div class="portfolio-modal mfp-hide" id="portfolio-modal-3">
     <div class="portfolio-modal-dialog bg-white">
       <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
@@ -391,9 +391,9 @@
         </div>
       </div>
     </div>
-  </div>
+  </div>-->
 
-  <!-- Portfolio Modal 4 -->
+  <!-- Portfolio Modal 4 
   <div class="portfolio-modal mfp-hide" id="portfolio-modal-4">
     <div class="portfolio-modal-dialog bg-white">
       <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
@@ -415,9 +415,9 @@
         </div>
       </div>
     </div>
-  </div>
+  </div>-->
 
-  <!-- Portfolio Modal 5 -->
+  <!-- Portfolio Modal 5
   <div class="portfolio-modal mfp-hide" id="portfolio-modal-5">
     <div class="portfolio-modal-dialog bg-white">
       <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
@@ -439,9 +439,9 @@
         </div>
       </div>
     </div>
-  </div>
+  </div>-->
 
-  <!-- Portfolio Modal 6 -->
+  <!-- Portfolio Modal 6 
   <div class="portfolio-modal mfp-hide" id="portfolio-modal-6">
     <div class="portfolio-modal-dialog bg-white">
       <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
@@ -463,7 +463,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div>-->
 
   <!-- JavaScript -->
   <script src="firebase.js"></script>
