--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
   <!-- Header -->
   <header class="masthead bg-primary text-white text-center">
-    <h1>Top 10 de películas de estreno</h1>
+    <h1>Top 10 de estrenos</h1>
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -103,8 +103,8 @@
       </a>
     </div>
     <h1 class="text-uppercase mb-0"></h1>
-    <hr class="star-light">
     <h2 class="font-weight-light mb-0">Ingresa y descubre más contenido!</h2>
+    <hr class="star-light">
     </div>
   </header>
   <!-- carrusel -->
@@ -296,7 +296,7 @@
           </ul>
         </div>
         <div class="col-md-4">
-          <h4 class="text-uppercase mb-4">Hackatón</h4>
+          <h4 class="text-uppercase mb-4">Hackathon</h4>
           <p class="lead mb-0">Realizado en Laboratoria
               <a href="https://github.com/OlgaContreras911/mex007-hackathon-interna">Repositorio en GitHub</a>.</p>
         </div>
