--- a/index2.html
+++ b/index2.html
@@ -70,7 +70,7 @@
 
   <!-- Header -->
   <header class="masthead bg-primary text-white text-center">
-    <h1>Ahora descubre más estrenos</h1>
+    <h1>Ahora descubre más contenido</h1>
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -101,10 +101,9 @@
         <span class="sr-only">Next</span>
       </a>
     </div>
-    <h1 class="fontawesome-free mb-1">Lista de las mejores películas de estreno </h1>
-
     <h2 class="font-weight-light mb-9"> No pierdas tiempo en elegir </h2>
-    </div>
+    <hr class="star-light">  
+  </div>
 
   </header>
   <!-- carrusel -->
@@ -296,7 +295,7 @@
           </ul>
         </div>
         <div class="col-md-4">
-          <h4 class="text-uppercase mb-4">Hackatón</h4>
+          <h4 class="text-uppercase mb-4">Hackathon</h4>
           <p class="lead mb-0"> Realizado en Laboratoria 
             <a href="https://github.com/OlgaContreras911/mex007-hackathon-interna">Repositorio en GitHub</a>.</p>
         </div>
